[gd_scene load_steps=2 format=3 uid="uid://sunny_says_hud"]

[ext_resource type="Script" path="res://sunny-says-level/hud.gd" id="1_hudgd"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hudgd")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CountdownLabel" type="Label" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="Root"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "Score: 0"
horizontal_alignment = 2

[node name="GameOverPanel" type="PanelContainer" parent="Root"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Root/GameOverPanel"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="GameOverLabel" type="Label" parent="Root/GameOverPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Game Over"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="Root/GameOverPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Score: 0"
horizontal_alignment = 1

[node name="ReturnButton" type="Button" parent="Root/GameOverPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Return to game selection"

